--- a/Practice2/index.tex
+++ b/Practice2/index.tex
@@ -178,7 +178,7 @@
 Для систематизации набора источников использовать одну из программ для управления библиографической информацией (библиографические менеджеры), например, Mendeley.
 
 
-Для управления библиографической информацией был использован библиографический менеджер Mendeley (рисунок 1). Основным затруднением является записание имён и фамилий разными стилями. Списки находятся в файлах \textit{library.eng.bib} и \textit{library.rus.bib}.
+Для управления библиографической информацией был использован библиографический менеджер Mendeley (рисунок 1). Основным затруднением является записание имён и фамилий разными стилями. Списки находятся в файлах \href{https://raw.githubusercontent.com/SemenMartynov/SPbPU_DigitalResources/main/Practice2/res/library.eng.bib}{library.eng.bib} и \href{https://raw.githubusercontent.com/SemenMartynov/SPbPU_DigitalResources/main/Practice2/res/library.rus.bib}{library.rus.bib}.
 
 \begin{figure}[H]
  \centering
