--- a/Practice3/index.tex
+++ b/Practice3/index.tex
@@ -158,7 +158,7 @@ Stanford School of Engineering: Cryptocurrencies and Blockchain Technologies (\u
 
 \textbf{Задание:} Представить полный список отобранных источников (использовать результаты ЛР1 И ЛР2 и п.1 данной ЛР3), распределив их по пунктам
 
-Списки находятся в файлах \textit{library.eng.bib} и \textit{library.rus.bib}
+Списки находятся в файлах \href{https://raw.githubusercontent.com/SemenMartynov/SPbPU_DigitalResources/main/Practice2/res/library.eng.bib}{library.eng.bib} и \href{https://raw.githubusercontent.com/SemenMartynov/SPbPU_DigitalResources/main/Practice2/res/library.rus.bib}{library.rus.bib}.
 
 При классификации материалов, я максимально старался избегать повторов. Но это оказалось довольно затруднительной задачей, т.к. в одной работе могут встречаться и исторические аспекты и современное состояние.
 
